--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus reiciendis est, eveniet tempore cum itaque repellat at, nostrum iusto dignissimos ad incidunt doloribus possimus ducimus minima vero consequatur tempora adipisci.
+    </p>
     <header>
 
     </header>
