--- a/www/index.html
+++ b/www/index.html
@@ -9,25 +9,120 @@
 </head>
 
 <body>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus reiciendis est, eveniet tempore cum itaque repellat at, nostrum iusto dignissimos ad incidunt doloribus possimus ducimus minima vero consequatur tempora adipisci.
-    </p>
-    <header>
 
-    </header>
-    <main>
-        <div class="promo">
-            <div class="promo-inner">
-                <h1 class="promo-ttl">Заголовок сайта</h1>
-                <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p>
+    <header class="header">
+        <div class="header-inner">
+            <div class="header-wrap">
+
+                <img src="images/Butterfly.logo(2).svg" alt="Логотип" class="main-logo">
+
+
+                <nav class="menu">
+                    <ul class="menu-list">
+                        <li class="menu-item">
+                            <a href="#" class="menu-link">Каталог</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#" class="menu-link">Отзывы</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#" class="menu-link">Контакты</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#" class="menu-link">FAQ</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
+    </header>
 
-        <script src="scripts/script.js"></script>
+    <main>
+        <section class="promo">
+            <div class="promo-inner">
+                <h1 class="promo-text">Индивидуальный пошив галсутков-бабочек</h1>
+                <a href="#" class="promo-btutton">Заказать бабочку</a>
+
+            </div>
+        </section>
+
+        <section class="portfolio">
+
+            <div class="portfolio-inner">
+                <h2 class="portfolio-text">Наши работы</h2>
+
+                <div class="portfolio-photo">
+                    <figure class="portfolio-figure">
+                        <img src="images/portfolio-pic.png" alt="Бабочка такая" class="portfolio-pic">
+                        <figcaption class="portfolio-pic-desc">Бабочка такая
+                        </figcaption>
+                    </figure>
+                    <figure class="portfolio-figure">
+                        <img src="images/portfolio-pic (1).png" alt="Бабочка растакая" class="portfolio-pic">
+                        <figcapcion class="portfolio-pic-desc"> "Бабочка растакая"</figcapcion>
+                    </figure>
+                    <figure class="portfolio-figure">
+                        <img src="images/portfolio-pic (2).png" alt="Бабочка сякая" class="portfolio-pic">
+                        <figcaption class="portfolio-pic-desc">Бабочка сякая</figcaption>
+                    </figure>
+                    <figure class="portfolio-figure">
+                        <img src="images/portfolio-pic(3).png" alt="Кривая" class="portfolio-pic">
+                        <figcaption class="portfolio-pic-desc">Кривая</figcaption>
+                    </figure>
+                </div>
+            </div>
+
+            <a href="#" class="portfolio-btutton">Все бабочки</a>
+        </section>
+        <section class="order">
+            <div class="order-inner">
+                <h2 class="order-title">Закажи пошив</h2>
+                <p class="order-text">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет обределиться с тканью.</p>
+                <form action="#" class="form">
+                    <div class="form-field form-field-part">
+                        <label for="name" class="form-label">Имя</label>
+                        <input placeholder="Иван Иванов" name="name" id="name" type="text" class="form-input">
+                    </div>
+                    <div class="form-field form-field-part">
+                        <label for="phone" class="form-label">Телефон</label>
+                        <input placeholder="+7 800 888-88-88" name="phone" id="phone" type="text" class="form-input">
+
+                    </div>
+                    <div class="form-field form-field-part">
+                        <button class="btn" type="submit">Заказать</button>
+
+                    </div>
+                </form>
+
+            </div>
+        </section>
     </main>
-    <footer>
 
+    <footer class="footer">
+        <div class="footer-inner">
+            <div class="footer-wrap">
+                <img src="images/Butterfly-footer.svg" alt="Логотип" class="footer-logo">
+
+                <div class="social-icons">
+
+                    <a href="tel-link" class="social-tel">+7 812 800-80-80</a>
+
+                    <ul class="social">
+                        <li class="social-item">
+                            <a href="#" style="background-image: url(images/icon-in.svg);" class="social-link" title="Мы в in"></a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" style="background-image: url(images/icon-FB.svg);" class="social-link" title="Мы помним FB"></a>
+                        </li>
+                        <li class="social-item">
+                            <a href="#" style="background-image: url(images/icon-Tell.svg);" class="social-link" title="Мы в Tell"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
