--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
                 <nav class="menu">
                     <ul class="menu-list">
                         <li class="menu-item">
-                            <a href="#" class="menu-link">Каталог</a>
+                            <a href="#" class="menu-link catalog">Каталог</a>
                         </li>
                         <li class="menu-item">
                             <a href="#" class="menu-link">Отзывы</a>
