--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
                 <img src="images/Butterfly.logo(2).svg" alt="Логотип" class="main-logo">
 
 
-                <nav class="menu">
+                <nav class="menu j-menu">
                     <ul class="menu-list">
                         <li class="menu-item">
                             <a href="#" class="menu-link catalog">Каталог</a>
@@ -32,7 +32,9 @@
                             <a href="#" class="menu-link">FAQ</a>
                         </li>
                     </ul>
+
                 </nav>
+                <button class="burger j-burger">menu</button>
             </div>
         </div>
     </header>
@@ -41,7 +43,7 @@
         <section class="promo">
             <div class="promo-inner">
                 <h1 class="promo-text">Индивидуальный пошив галсутков-бабочек</h1>
-                <a href="#" class="promo-btutton">Заказать бабочку</a>
+                <a href="#" class="promo-button">Заказать бабочку</a>
 
             </div>
         </section>
@@ -72,7 +74,7 @@
                 </div>
             </div>
 
-            <a href="#" class="portfolio-btutton">Все бабочки</a>
+            <a href="#" class="portfolio-button">Все бабочки</a>
         </section>
         <section class="order">
             <div class="order-inner">
@@ -122,6 +124,7 @@
             </div>
         </div>
     </footer>
+    <script src="scripts/jquery-3.6.0.min.js"></script>
     <script src="scripts/script.js"></script>
 </body>
 
